<resources>
    <string name="app_name">征仔手表</string>
    <string name="btn_back">返回</string>
    <string name="btn_add">添加</string>
    <string name="net_error">请求失败</string>
    <string name="net_suc">请求成功</string>
    <string name="device_id">设备ID</string>
    <string name="card_iccid">征卡ICCID</string>
    <string name="device_phone">手机号码</string>
    <string name="device_name">设备名称</string>
    <string name="card_name">征卡名称</string>
    <string name="device_code">获取验证码</string>
    <string name="btn_lock">绑定</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="set_mov_tar">行驶间隔(s)</string>
    <string name="set_stop_tar">停车间隔(min)</string>
    <string name="set_lk_tar">路况发生间隔(min)</string>
    <string name="set_stop_sw">停车监控</string>
    <string name="set_shock_sence">震动灵敏度</string>
    <string name="set_new_sw">新闻播报</string>
    <string name="set_weather_sw">天气服务</string>
    <string name="set_email_sw">邮件报警</string>
    <string name="set_sound">音量</string>
    <string name="set_ratio">分辨率</string>
    <string name="set_sence">灵敏度</string>
    <string name="set_safe_desk">屏保</string>
    <string name="set_time_zone">时区选择</string>
    <string name="set_time">时间设置</string>
    <string name="set_light_hz">设置光源频率</string>
    <string name="set_recorder_languaga">语言</string>
    <string name="set_mic">麦克风</string>
    <string name="set_sd_state">手机存储状态</string>
    <string name="set_video_state">存储卡状态</string>
    <string name="set_video_section">视频分段</string>
    <string name="set_clear">格式化</string>
    <string name="set_reset">恢复默认</string>
    <string name="set_languaga">语言</string>
    <string name="set_clear_save">清理缓存</string>
    <string name="set_about">关于</string>
    <string name="set_help">帮助</string>
    <string name="about_phone">电话:(0592)6108103</string>
    <string name="about_mail">传真:(0592)6681270</string>
    <string name="about_hot_line">热线:4006-392-999</string>
    <string name="about_qq">QQ:4006-392-999</string>
    <string name="about_web">官网:http://new.conqueror.cn/</string>
    <string name="loading_failed">数据加载失败</string>
    <string name="languaga_cn">简体中文</string>
    <string name="languaga_cntw">繁体中文</string>
    <string name="languaga_english">英语</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="welcome">Welcome!</string>
    <string name="ht_welcome_desc">Endoscope lets you to stream live video between android devices!</string>
    <string name="tab_onway">在路上</string>
    <string name="tab_mydevice">我的设备</string>
    <string name="tab_zzwarn">征仔预警</string>
    <string name="tab_usercenter">我</string>
    <string name="tab_mirror_1">查询车辆</string>
    <string name="tab_mirror_2">监控</string>
    <string name="tab_mirror_3">数据采集</string>
    <string name="tab_mirror_4">远程关机</string>
    <string name="tab_home">主页</string>
    <string name="tab_device">设备管理</string>
    <string name="tab_map">地图</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我的</string>
    <string name="libPassword_hint">请输入6–16位密码</string>
    <string name="libLogin">登录</string>
    <string name="libAutoLogin">自动登录</string>
    <string name="libAccount_hint">手机号/邮箱</string>
    <string name="login_SelectLoginType">使用其他方式登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="home_science">今日资讯</string>
    <string name="love_bonus">爱心奖励</string>
    <string name="home_add_device">添加设备</string>
    <string name="edit_info">设备信息</string>
    <string name="unbind">解绑设备</string>
    <string name="menu_wechat">微信</string>
    <string name="menu_phone_list">电话本</string>
    <string name="menu_phone">电话</string>
    <string name="menu_dad">上课禁用</string>
    <string name="menu_location">定位</string>
    <string name="device_card">设备名片</string>
    <string name="chat_edit_hint">对宝贝说点什么…</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="send">发送</string>
    <string name="chat_empty_tip">没有聊天记录</string>
    <string name="chat_empty_tip1">"还没有和%1$s聊过天呢，想和%1$s说点什么吗？
您可以在这里随心聊。"</string>
    <string name="login_bind_device_tip">提示：亲，如果有注册码只能使用注册码，如果没有则用设备ID。</string>
    <string name="no_qrcode">二维码丢失了？</string>
    <string name="reg_code_">注册码</string>
    <string name="scan_or_input">扫描或输入</string>
    <string name="login_nickname_hint">宝贝昵称</string>
    <string name="nickname_">设备昵称</string>
    <string name="relation_to_me">我是宝贝的：</string>
    <string name="tx_near">附近</string>
    <string name="tx_local_type_0">无法定位</string>
    <string name="tx_local_type_1">GPS定位</string>
    <string name="tx_local_type_2">基站定位</string>
    <string name="tx_local_type_3">WIFI定位</string>
    <string name="tx_call">呼叫</string>
    <string name="tx_call_back">语音监护</string>
    <string name="tx_call_fail">不能打电话</string>
    <string name="tx_hint_phone">输入设备电话号码</string>
    <string name="tx_permission_fail">已拒绝权限</string>
    <string name="tx_save_start">松开保存</string>
    <string name="tx_speak_start">按住说话</string>
    <string name="tx_no_null">输入不能为空</string>
    <string name="tx_call_suc">回拨请求已经发出</string>
    <string name="tx_clock_type1">一次</string>
    <string name="tx_clock_type2">每天</string>
    <string name="tx_clock_type3">自定义</string>
    <string name="week01">周一</string>
    <string name="week02">周二</string>
    <string name="week03">周三</string>
    <string name="week04">周四</string>
    <string name="week05">周五</string>
    <string name="week06">周六</string>
    <string name="week07">周日</string>
    <string name="repeat_time">重复时间</string>
    <string name="tx_tip">提示</string>
    <string name="tx_choise">选择操作</string>
    <string name="tx_rename">重命名</string>
    <string name="tx_del_friend">解除好友</string>
    <string name="tx_name_friend">输入好友昵称</string>
    <string name="btn_edit">编辑</string>
    <string name="tx_introduce">不同的智能设备，特有功能会不同</string>
    <string name="tx_remote">远程操作</string>
    <string name="tx_remote_shutdown">设备远程关机</string>
    <string name="tx_name_wifi">输入WIFII密码</string>
    <string name="tx_auth">授权</string>
    <string name="tx_auth_tip">授权该设备可以使用</string>
    <string name="tx_auth_wait">等待授权</string>
    <string name="tx_authed">已经授权</string>
    <string name="tx_auth_suc">绑定成功</string>
    <string name="tx_auth_did">已经绑定</string>
    <string name="tx_no_find">设备没找到</string>
    <string name="tip_searching">正在获取地址</string>
    <string name="tip_near">附近</string>
    <string name="tip_watch_poi">宝贝的位置</string>
    <string name="tip_no_find_watch">找不到该设备</string>
    <string name="phone_book">电话本</string>
    <string name="home_dnd">上课禁用</string>
    <string name="find_watch">找设备</string>
    <string name="digits_phone">0123456789+</string>
    <string name="digits_number">0123456789</string>
    <string name="login_phone_hint">手表电话号码</string>
    <string name="phone_hint">号码长度在2–19之间</string>
    <string name="pick_hint">手机联系人</string>
    <string name="input_name">请输入姓名</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="tips_call1">*点击号码可进行编辑</string>
    <string name="tips_call2">成功呼叫后将保存新号码</string>
    <string name="call1">呼叫</string>
    <string name="set_suc">设置成功</string>
    <string name="no_null">输入不能为空</string>
    <string name="sleep_cal">睡眠设置</string>
    <string name="sleep_cal_switch">睡眠开关</string>
    <string name="time_slot">时段</string>
    <string name="target_">目标</string>
    <string name="step_cal_switch">计步开关</string>
    <string name="time_slot_1">时段1</string>
    <string name="time_slot_2">时段2</string>
    <string name="time_slot_3">时段3</string>
    <string name="time_slot_">时间段：</string>
    <string name="step_length_">步距：</string>
    <string name="weight_">体重：</string>
    <string name="special_function">特有功能</string>
    <string name="apply_health">健康</string>
    <string name="remote_camera">远程拍照</string>
    <string name="touch_friends">碰碰管理</string>
    <string name="schedule">课程表</string>
    <string name="base_function">基础功能</string>
    <string name="monitor1">语音监护</string>
    <string name="wlan">终端WIFI设置</string>
    <string name="sos_family">SOS紧急号码</string>
    <string name="alarm_clock">设备闹钟</string>
    <string name="sms_alart">短信提醒</string>
    <string name="push_switch">推送开关</string>
    <string name="workmode">工作模式</string>
    <string name="remote_shutdown">远程关机</string>
    <string name="device_love_tips">宝贝很棒，给点奖励吧！</string>
    <string name="ok">@android:string/ok</string>
    <string name="state">状态</string>
    <string name="state_1">等待安装</string>
    <string name="state_2">失败，重新安装</string>
    <string name="state_3">卸载</string>
    <string name="state_4">安装</string>
    <string name="login_no_bind_data">当前无正在绑定的设备</string>
    <string name="device">设备</string>
    <string name="default_hour_min">00:00</string>
    <string name="dnd_tip_1">提示：</string>
    <string name="dnd_tip">"1.宝贝正在学习，请勿打扰
2.只对周一到周五有效"</string>
    <string name="once">一次</string>
    <string name="every_day">每日</string>
    <string name="zdy">自定义</string>
    <string name="find_watch_anytime_anywhere">随时随地知道设备的位置</string>
    <string name="setting_look_for_watch_tip_01">1.点击查找设备按钮</string>
    <string name="setting_look_for_watch_tip_02">2.在弹框中点击确定</string>
    <string name="setting_look_for_watch_tip_03">3.指令发送成功</string>
    <string name="setting_look_for_watch_tip_04">4.设备接收指令后报警</string>
    <string name="num1">号码1</string>
    <string name="num2">号码2</string>
    <string name="num3">号码3</string>
    <string name="send_vcode">获取验证码</string>
    <string name="sign_up_1">确认注册</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_vcode">请输入验证码</string>
    <string name="login_sign_up_step_1">请输入家长/本机号码</string>
</resources>