<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:title="设置">

        <RingtonePreference
            android:widgetLayout="@layout/select_item"
            android:key="save_flow"
            android:defaultValue="false"
            android:layout="@layout/preference_item"
            android:title="@string/set_mov_tar"/>
        <RingtonePreference
            android:widgetLayout="@layout/select_item"
            android:key="allow_push"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_stop_tar"/>
        <RingtonePreference
            android:widgetLayout="@layout/select_item"
            android:key="allow_push"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_lk_tar"/>
        <CheckBoxPreference
            android:widgetLayout="@layout/switch_item"
            android:key="save_flow"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_stop_sw"/>
        <RingtonePreference
            android:widgetLayout="@layout/select_item"
            android:key="allow_push"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_shock_sence"/>
        <CheckBoxPreference
            android:widgetLayout="@layout/switch_item"
            android:key="save_flow"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_new_sw"/>
        <CheckBoxPreference
            android:widgetLayout="@layout/switch_item"
            android:key="save_flow"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_weather_sw"/>
        <CheckBoxPreference
            android:widgetLayout="@layout/switch_item"
            android:key="save_flow"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            android:title="@string/set_email_sw"/>




    <Preference
        android:layout="@layout/preference_item_single"
        android:key="save">
    </Preference>
</PreferenceScreen>