<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:title="关于">


        <Preference
            android:layout="@layout/image_layout"
            android:summary="V 1.0"
            android:title="当前版本" />
        <Preference
            android:layout="@layout/phone_item"
            android:title="@string/about_phone" />
        <Preference
            android:layout="@layout/phone_item"
            android:title="@string/about_mail" />
        <Preference
            android:layout="@layout/phone_item"
            android:title="@string/about_hot_line" />
        <Preference
            android:layout="@layout/phone_item"
            android:title="@string/about_qq" />
        <Preference
            android:layout="@layout/phone_item"
            android:title="@string/about_web" />
        <Preference
            android:layout="@layout/button_item"
            android:title="问题反馈" />

        <!--     <Preference
                 android:layout="@layout/preference_item"
                 android:summary="xiongbo010@gmail.com"
                 android:title="联系邮箱" />-->

</PreferenceScreen>