<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:title="设置">

     <RingtonePreference
            android:widgetLayout="@layout/select_item"
            android:key="list_preference"
            android:layout="@layout/preference_item"
            android:title="@string/set_languaga"/>

     <RingtonePreference
        android:widgetLayout="@layout/item_button"
        android:key="list_preference"
        android:layout="@layout/preference_item"
        android:title="@string/set_clear_save"/>


    <Preference
        android:layout="@layout/preference_item"
        android:summary="厦门征服者开发团队"
        android:title="@string/set_about"/>


    <Preference
        android:layout="@layout/preference_item"
        android:title="@string/set_help" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://61.131.68.156:7123/TZ/toIndex.do" />
    </Preference>




</PreferenceScreen>