<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num1" />

        <EditText
            android:id="@+id/setting_sos_num_01"
            style="@style/device_view_setting_dialog_edit_common"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            android:hint="@string/login_input_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num2" />

        <EditText
            android:id="@+id/setting_sos_num_02"
            style="@style/device_view_setting_dialog_edit_common"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="+0123456789"
            android:hint="@string/login_input_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num3" />

        <EditText
            android:id="@+id/setting_sos_num_03"
            style="@style/device_view_setting_dialog_edit_common"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="+0123456789"
            android:hint="@string/login_input_phone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
    <Button

        android:id="@+id/btn_sos_sure"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:text="@string/btn_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/largeTextSize" />
    </LinearLayout>
</LinearLayout>